force-app/main/default/objects/Passport_Application__c/Passport_Application__c.object-meta.xml
<CustomObject>
    <label>Passport Application</label>
    <nameField>
        <displayFormat>ARN-{000000}</displayFormat>
        <label>ARN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passport Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>