force-app/main/default/objects/Passport_Application__c/fields/Aadhaar_Token__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Token__c</fullName>
    <label>Aadhaar Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>