force-app/main/default/objects/Passport_Application__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>Applicant</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Passport_Applications</relationshipName>
    <relationshipLabel>Passport Applications</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>