force-app/main/default/objects/Passport_Application__c/fields/Applicant_Age__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Age__c</fullName>
    <label>Applicant Age</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <formula>FLOOR((TODAY() - Date_of_Birth__c) / 365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>