force-app/main/default/objects/Passport_Application__c/fields/Applied_For_Minor__c.field-meta.xml
<CustomField>
    <fullName>Applied_For_Minor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied For Minor</label>
    <type>Checkbox</type>
</CustomField>