force-app/main/default/objects/Passport_Application__c/fields/Booklet_Pages__c.field-meta.xml
<CustomField>
    <fullName>Booklet_Pages__c</fullName>
    <label>Booklet Pages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>36</fullName>
                <default>true</default>
                <label>36</label>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>