force-app/main/default/objects/Passport_Application__c/fields/Clearance_Level__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Level__c</fullName>
    <label>Clearance Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Passport_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Consular</fullName>
            </value>
            <value>
                <fullName>Minister</fullName>
            </value>
            <value>
                <fullName>Govt Deputation</fullName>
            </value>
            <value>
                <fullName>Delegation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>