force-app/main/default/objects/Passport_Application__c/fields/Consent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Consent_Timestamp__c</fullName>
    <label>Consent Timestamp</label>
    <type>DateTime</type>
</CustomField>