force-app/main/default/objects/Passport_Application__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Text</type>
    <length>60</length>
</CustomField>