force-app/main/default/objects/Passport_Application__c/fields/Documents_Verified__c.field-meta.xml
<CustomField>
    <fullName>Documents_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Verified</label>
    <type>Checkbox</type>
</CustomField>