force-app/main/default/objects/Passport_Application__c/fields/ECR_Status__c.field-meta.xml
<CustomField>
    <fullName>ECR_Status__c</fullName>
    <label>ECR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>ECNR</fullName>
                <default>true</default>
                <label>ECNR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>