force-app/main/default/objects/Passport_Application__c/fields/Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Granted_Date__c</fullName>
    <label>Granted Date</label>
    <type>DateTime</type>
</CustomField>