force-app/main/default/objects/Passport_Application__c/fields/Guardian_Consent__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Consent__c</fullName>
    <label>Guardian Consent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>