force-app/main/default/objects/Passport_Application__c/fields/Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Name__c</fullName>
    <label>Guardian Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>