force-app/main/default/objects/Passport_Application__c/fields/Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft__c</fullName>
    <label>Is Draft</label>
    <type>Checkbox</type>
    <formula>ISPICKVAL(Status__c, "Draft")</formula>
</CustomField>