force-app/main/default/objects/Passport_Application__c/fields/Is_Minor__c.field-meta.xml
<CustomField>
    <fullName>Is_Minor__c</fullName>
    <label>Is Minor</label>
    <type>Checkbox</type>
    <formula>Applicant_Age__c &lt; 18</formula>
</CustomField>