force-app/main/default/objects/Passport_Application__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>