force-app/main/default/objects/Passport_Application__c/fields/Mobile_For_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Mobile_For_Alerts__c</fullName>
    <label>Mobile For Alerts</label>
    <type>Phone</type>
</CustomField>