force-app/main/default/objects/Passport_Application__c/fields/Notification_Consent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Consent</label>
    <type>Checkbox</type>
</CustomField>