force-app/main/default/objects/Passport_Application__c/fields/Passport_Category__c.field-meta.xml
<CustomField>
    <fullName>Passport_Category__c</fullName>
    <label>Passport Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordinary</fullName>
                <default>true</default>
                <label>Ordinary</label>
            </value>
            <value>
                <fullName>Diplomatic</fullName>
            </value>
            <value>
                <fullName>Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>