force-app/main/default/objects/Passport_Application__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <type>Text</type>
    <length>64</length>
</CustomField>