force-app/main/default/objects/Passport_Application__c/fields/Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth__c</fullName>
    <label>Place of Birth</label>
    <type>Text</type>
    <length>100</length>
</CustomField>