force-app/main/default/objects/Passport_Application__c/fields/Police_Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>Police_Verification_Type__c</fullName>
    <label>Police Verification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-PV</fullName>
            </value>
            <value>
                <fullName>Post-PV</fullName>
            </value>
            <value>
                <fullName>No PV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>