force-app/main/default/objects/Passport_Application__c/fields/Previous_Passport_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Previous_Passport_Expiry__c</fullName>
    <label>Previous Passport Expiry</label>
    <type>Date</type>
</CustomField>