force-app/main/default/objects/Passport_Application__c/fields/Previous_Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Previous_Passport_No__c</fullName>
    <label>Previous Passport No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>