force-app/main/default/objects/Passport_Application__c/fields/Reason_For_Reissue__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Reissue__c</fullName>
    <label>Reason For Reissue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expiry</fullName>
            </value>
            <value>
                <fullName>Pages Exhausted</fullName>
            </value>
            <value>
                <fullName>Change of Details</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>