force-app/main/default/objects/Passport_Application__c/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <label>Spouse Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>