force-app/main/default/objects/Passport_Application__c/fields/Stage_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Date__c</fullName>
    <label>Stage Entered Date</label>
    <type>DateTime</type>
</CustomField>