force-app/main/default/objects/Passport_Application__c/fields/Tatkal__c.field-meta.xml
<CustomField>
    <fullName>Tatkal__c</fullName>
    <label>Tatkal</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>