force-app/main/default/objects/Passport_Application__c/fields/Validity_Years__c.field-meta.xml
<CustomField>
    <fullName>Validity_Years__c</fullName>
    <label>Validity Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10</label>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>