force-app/main/default/objects/Passport_Application__c/fields/Years_At_Address__c.field-meta.xml
<CustomField>
    <fullName>Years_At_Address__c</fullName>
    <label>Years at Address</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>