force-app/main/default/objects/Passport_Application__c/recordTypes/Diplomatic_Official.recordType-meta.xml
<RecordType>
    <fullName>Diplomatic_Official</fullName>
    <active>true</active>
    <label>Diplomatic / Official</label>
</RecordType>