force-app/main/default/objects/Passport_Application__c/recordTypes/Fresh.recordType-meta.xml
<RecordType>
    <fullName>Fresh</fullName>
    <active>true</active>
    <label>Fresh</label>
</RecordType>