force-app/main/default/objects/Passport_Application__c/recordTypes/Lost_Damaged.recordType-meta.xml
<RecordType>
    <fullName>Lost_Damaged</fullName>
    <active>true</active>
    <label>Lost / Damaged</label>
</RecordType>