force-app/main/default/objects/Passport_Application__c/recordTypes/Minor.recordType-meta.xml
<RecordType>
    <fullName>Minor</fullName>
    <active>true</active>
    <label>Minor</label>
</RecordType>