force-app/main/default/objects/Passport_Application__c/recordTypes/Re_Issue.recordType-meta.xml
<RecordType>
    <fullName>Re_Issue</fullName>
    <active>true</active>
    <label>Re-issue</label>
</RecordType>