force-app/main/default/objects/Passport_Application__c/recordTypes/Tatkal.recordType-meta.xml
<RecordType>
    <fullName>Tatkal</fullName>
    <active>true</active>
    <label>Tatkal</label>
</RecordType>