force-app/main/default/objects/Passport_Application__c/validationRules/Cannot_Grant_With_Pending_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Grant_With_Pending_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c,"Granting"), NOT(ISPICKVAL(Payment_Status__c,"Paid")) )</errorConditionFormula>
    <errorMessage>Payment must be Paid before the application can move to Granting.</errorMessage>
</ValidationRule>