force-app/main/default/objects/Passport_Application__c/validationRules/Minor_Needs_Guardian_Consent.validationRule-meta.xml
<ValidationRule>
    <fullName>Minor_Needs_Guardian_Consent</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Applied_For_Minor__c, NOT(Guardian_Consent__c), NOT(ISPICKVAL(Status__c,"Draft")) )</errorConditionFormula>
    <errorMessage>Guardian Consent is required for a minor application before submission.</errorMessage>
</ValidationRule>