force-app/main/default/objects/Passport_Application__c/validationRules/Minor_Validity_Must_Be_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Minor_Validity_Must_Be_5</fullName>
    <active>true</active>
    <description>Statutory rule: passports issued to minors carry 5-year validity, not 10. Enforced on submit so the fee calculation and the printed booklet agree. Draft records remain freely saveable.</description>
    <errorConditionFormula>AND( NOT(ISPICKVAL(Status__c, &quot;Draft&quot;)), Applied_For_Minor__c, NOT(ISPICKVAL(Validity_Years__c, &quot;5&quot;)) )</errorConditionFormula>
    <errorDisplayField>Validity_Years__c</errorDisplayField>
    <errorMessage>A minor’s passport is valid for 5 years. Set Validity Years to 5.</errorMessage>
</ValidationRule>