force-app/main/default/objects/Passport_Application__c/validationRules/Mobile_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Format</fullName>
    <active>true</active>
    <description>Format check only - fires when Mobile is populated but invalid, on Draft as well, since a badly formatted number is never useful. Require_Core_Fields_On_Submit separately makes Mobile mandatory on submit.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Mobile__c)), NOT(REGEX(Mobile__c, &quot;^[6-9][0-9]{9}$&quot;)) )</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Enter a 10-digit Indian mobile number starting with 6, 7, 8 or 9 (no spaces, +91 or dashes).</errorMessage>
</ValidationRule>