force-app/main/default/objects/Passport_Application__c/validationRules/No_Backward_Move_Once_Delivered.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Backward_Move_Once_Delivered</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(PRIORVALUE(Status__c),&quot;Delivered&quot;), NOT(ISPICKVAL(Status__c,&quot;Delivered&quot;)) )</errorConditionFormula>
    <errorMessage>A Delivered application cannot be moved back to an earlier stage.</errorMessage>
</ValidationRule>